--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -23,6 +23,7 @@
         <input class="form-control" name="confirmation" placeholder="Confirmation" type="password" required>
     </div>
     <button class="btn btn-primary" type="submit">Change Password</button>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 <br>
 <p>Password must be at least 8 characters long.</p>
