--- a/templates/contest/delete_confirm.html
+++ b/templates/contest/delete_confirm.html
@@ -10,5 +10,6 @@
 </p>
 <form method="post">
     <input class="btn btn-primary problem-submit-button" type="submit" value="Confirm">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 {% endblock %}
