--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -16,6 +16,7 @@
 <form method="post">
     <input class="form-control form-group" name="email" placeholder="Email Address" type="text" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 <br>
 <p>If there is an account associated with the email you provided, a link to reset your password has been sent to that link. Be sure to check your spam folder!</p>
