--- a/templates/problem/editeditorial.html
+++ b/templates/problem/editeditorial.html
@@ -7,5 +7,6 @@
 <form autocomplete="off" method="post">
     <textarea class="form-control form-group" id="editorial" name="editorial" rows="20" required>{{ data["editorial"] if data["editorial"] else "" }}</textarea>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Submit">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 {% endblock %}
