--- a/templates/problem/editproblem.html
+++ b/templates/problem/editproblem.html
@@ -9,5 +9,6 @@
     <textarea class="form-control form-group" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
     <textarea class="form-control form-group" id="hints" name="hints" rows="10" placeholder="Hints">{{ data["hints"] if data["hints"] }}</textarea>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Submit">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 {% endblock %}
