--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -38,6 +38,7 @@
         <form autocomplete="off" method="post" style="margin-bottom: 0.5rem;">
             <input class="form-control" type="text" id="flag" name="flag" placeholder="Flag" style="margin-bottom: 0.5rem;" required>
             <input class="btn btn-primary problem-submit-button" type="submit" value="Submit">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         </form>
 
         <p>
