--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -16,6 +16,7 @@
     <input class="form-control form-group" name="password" placeholder="Password" type="password" required>
     <input class="form-control form-group" name="confirmation" placeholder="Confirmation" type="password" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 <br>
 <p style="margin-top: 8px;">
