--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -4,7 +4,14 @@
 
 {% block main %}
 <h1>{{ data["name"] }}</h1>
-<div id="confirm" style="cursor: pointer;"></div>
+{% if session["admin"] %}
+    <div id="confirm" style="display: none;">
+        <form method="post" style="margin-bottom: 1rem;" action="{{ request.path }}/delete">
+            <input class="btn btn-danger" type="submit" value="Are you sure you want to delete this problem? Click here to confirm.">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        </form>
+    </div>
+{% endif %}
 <div class="flex">
     <div style="flex: 3; padding: 4px; word-break: break-word;">
         <div id="description" class="showdown">
@@ -36,7 +43,7 @@
                 <br><a href="/admin/submissions?problem_id={{ request.path.split("/")[2] }}">View submissions</a>
                 <br><a href="{{ request.path }}/editeditorial">Create/edit editorial</a>
                 <br><a href="{{ request.path }}/edit">Edit problem</a>
-                <br><a href="#" onclick="deletemsg(this)">Delete problem</a>
+                <br><a href="#" onclick="$('#confirm').css('display', '')">Delete problem</a>
                 {% if data["draft"] %}
                     <br><a href="{{ request.path }}/publish">Publish draft</a>
                 {% endif %}
@@ -44,18 +51,4 @@
         </p>
     </div>
 </div>
-<script>
-    function deleteProblem(e) {
-        window.location.href = window.location.pathname + "/delete";
-    }
-
-    function deletemsg(e) {
-        var msg = `
-            <div class="alert alert-danger show" role="alert">
-                Are you sure you want to delete this problem? Click this message to confirm.
-            </div>`;
-        $("#confirm").html(msg)
-                     .attr("onclick", "deleteProblem(this)");
-    }
-</script>
 {% endblock %}
