--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -6,8 +6,8 @@
 <h1>{{ data["name"] }}</h1>
 {% if session["admin"] %}
     <div id="confirm" style="display: none;">
-        <form method="post" style="margin-bottom: 1rem;" action="{{ request.path }}/delete">
-            <input class="btn btn-danger" type="submit" value="Are you sure you want to delete this problem? Click here to confirm.">
+        <form method="post" style="margin-bottom: 1rem;" action="">
+            <input class="btn btn-danger" type="submit" value="">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         </form>
     </div>
@@ -43,12 +43,28 @@
                 <br><a href="/admin/submissions?problem_id={{ request.path.split("/")[2] }}">View submissions</a>
                 <br><a href="{{ request.path }}/editeditorial">Create/edit editorial</a>
                 <br><a href="{{ request.path }}/edit">Edit problem</a>
-                <br><a href="#" onclick="$('#confirm').css('display', '')">Delete problem</a>
+                <br><a href="#" onclick="deletemsg()">Delete problem</a>
                 {% if data["draft"] %}
-                    <br><a href="{{ request.path }}/publish">Publish draft</a>
+                    <br><a href="#" onclick="publishmsg()">Publish draft</a>
                 {% endif %}
             {% endif %}
         </p>
     </div>
 </div>
+<script>
+    function deletemsg() {
+        $("#confirm").css("display", "")
+                     .find("form")
+                     .attr("action", window.location.pathname + "/delete")
+                     .find(".btn")
+                     .attr("value", "Are you sure you want to delete this problem? Click here to confirm.");
+    }
+    function publishmsg() {
+        $("#confirm").css("display", "")
+                     .find("form")
+                     .attr("action", window.location.pathname + "/publish")
+                     .find(".btn")
+                     .attr("value", "Are you sure you want to publish this problem? Click here to confirm.");
+    }
+</script>
 {% endblock %}
