--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,15 @@
 {% block title %}Home{% endblock %}
 
 {% block main %}
-<div id="confirm" style="cursor: pointer;"></div>
+{% if session["admin"] %}
+    <div id="confirm" style="display: none;">
+        <form method="post" style="margin-bottom: 1rem;" action="/admin/deleteannouncement">
+            <input class="btn btn-danger" type="submit" value="Are you sure you want to delete this announcement? Click here to confirm.">
+            <input type="hidden" name="aid" value="">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        </form>
+    </div>
+{% endif %}
 <h1>Announcements</h1>
 {% for announcement in data %}
     <div class="card post-card" style="max-height: 600px;">
@@ -27,20 +35,15 @@
 {% endfor %}
 <div id="pagination"></div>
 <script>
-    function deleteAnnouncement(e) {
-        var aid = e.getAttribute("aid");
-        window.location.href = "/admin/deleteannouncement?aid=" + aid;
-    }
-
     function deletemsg(e) {
         var id = $(e).attr("aid")
         var msg = `
             <div class="alert alert-danger show" role="alert">
                 Are you sure you want to delete this announcement? Click this message to confirm.
             </div>`;
-        $("#confirm").html(msg)
-                     .attr("aid", id)
-                     .attr("onclick", "deleteAnnouncement(this)");
+        $("#confirm").css("display", "")
+                     .find("input[name='aid']")
+                     .attr("value", id);
     }
 
     var total_length = {{ length }};
