Implement shadow DOM
content can no longer pollute the rest of page using malformed HTML
fixed at least two ways of content inside problem description messing with outside page
 - very wide element inside could squish right sidebar off the page, this was fixed
 - position: absolute, transform, and other tricks to move content out of the box fixed
still need to fix position: fixed exploit

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,6 +70,11 @@
     }
 }
 
+#problem-description {
+    overflow: hidden;
+    position: relative;
+}
+
 /****************** CONTEST PAGE LAYOUT **********************/
 #contest-description-container, #contest-description-container-keep-open {
      position: fixed;
