--- a/src/templates/contest/contest_problem.html
+++ b/src/templates/contest/contest_problem.html
@@ -15,7 +15,7 @@
     </div>
 {% endif %}
 <div class="flex">
-    <div style="flex: 3; padding: 4px; word-break: break-word;">
+    <div style="flex: 3; padding: 4px; word-break: break-word; min-width: 0px;">
         <div id=description class="showdown">
             <textarea style="display: none;">{{ data["description"] | safe }}</textarea>
         </div>
