fixes csrf issues (closes #170)

--- a/src/templates/auth/forgotpassword.html
+++ b/src/templates/auth/forgotpassword.html
@@ -5,6 +5,7 @@
 {% block main %}
 <h1 class="text-center">Forgot Password</h1>
 <form method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <input class="form-control mb-3" name="email" placeholder="Email Address" type="text" required>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     {% if USE_CAPTCHA %}
